list and filter allocations
